--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL=mongodb+srv://admin:admin@cluster0.synpv.mongodb.net/songDatabase?retryWrites=true&w=majority
-PORT = 3000
+PORT = 3003
+TOKEN_SECRET = yhiedjvnfhueik43y879iu
